Add wait for registration and for server publishers